:wrench: Config changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 quarkus.application.name = portalz-api
 
 # datasource configuration
-# quarkus.datasource.db-kind  = quarkus.datasource.db-kind = jdbc-postgresql
 quarkus.datasource.jdbc.url = jdbc:postgresql://postgresql-db.captain.thibaultdct.fr:5432/portalz
 quarkus.hibernate-orm.database.generation = update
-quarkus.datasource.username = quarkus-api
-quarkus.datasource.password = quarkus-api
+quarkus.datasource.username = ${DB_USERNAME}
+quarkus.datasource.password = ${DB_PASSWORD}
 %dev.quarkus.datasource.username = quarkus-api
 %dev.quarkus.datasource.password = quarkus-api
 %dev.quarkus.hibernate-orm.log.sql = true
+
+# openAPI configuration
+quarkus.swagger-ui.always-include = true
+quarkus.swagger-ui.theme = material
+quarkus.swagger-ui.path = /swagger-ui
+quarkus.smallrye-openapi.path = /swagger
