--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,5 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test
+      - build-and-test:
+          context: portalz-api-config
