--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 quarkus.application.name = portalz-api
 
 # datasource configuration
-quarkus.datasource.jdbc.url = jdbc:postgresql://postgresql-db.captain.thibaultdct.fr:5432/portalz
+quarkus.datasource.jdbc.url = jdbc:postgresql://supabase-db.cloud.thibaultdct.fr:5432/portalz
 quarkus.hibernate-orm.database.generation = update
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
-%dev.quarkus.datasource.username = quarkus-api
-%dev.quarkus.datasource.password = quarkus-api
 %dev.quarkus.hibernate-orm.log.sql = true
 
 # openAPI configuration
@@ -14,3 +12,9 @@ quarkus.swagger-ui.always-include = true
 quarkus.swagger-ui.theme = material
 quarkus.swagger-ui.path = /swagger-ui
 quarkus.smallrye-openapi.path = /swagger
+
+# OIDC configuration
+quarkus.oidc.auth-server-url = https://keycloak.captain.thibaultdct.fr/auth/realms/Portalz
+quarkus.oidc.client-id = portalz-auth-service
+quarkus.oidc.credentials.secret = 72e5c3e2-67d8-4709-b1ff-7b1aac40e2bd
+quarkus.oidc.tls.verification = none
