--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
         # ########################
       - run:
           name: Download Dependencies
-          command: mvn dependency:go-offline
+          command: mvn install
       - save_cache:
           paths:
             - ~/.m2
