--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ version: 2.1
 jobs:
   build-and-test:
     machine: true
+    docker:
+      - image: cimg/openjdk:11.0
     resource_class: medium
     working_directory: ~/repo
     environment:
@@ -20,7 +22,7 @@ jobs:
         # ########################
       - run:
           name: Download Dependencies
-          command: mvn install
+          command: mvn dependency:go-offline
       - save_cache:
           paths:
             - ~/.m2
