--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
       # ########################
       - run:
           name: Build (Standard)
-          command: ./mvnw clean package -DskipTests -Dmaven.test.skip=true
+          command: sh ./mvnw clean package -DskipTests -Dmaven.test.skip=true
       - run:
           name: Verify (Standard)
-          command: ./mvnw test
+          command: sh ./mvnw test
       # Install GraalVM and native-image, needed for a native Quarkus build
       # ########################
       - run:
@@ -47,14 +47,14 @@ jobs:
       # ########################
       - run:
           name: Build (Native)
-          command: ./mvnw clean package -Pnative -DskipTests -Dmaven.test.skip=true
+          command: sh ./mvnw clean package -Pnative -DskipTests -Dmaven.test.skip=true
           no_output_timeout: 30m
       - run:
           name: Tests
           command: mvn test
       - run:
           name: Verify (Native)
-          command: ./mvnw verify -Pnative
+          command: sh ./mvnw verify -Pnative
           no_output_timeout: 30m
 #  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
 #  build-and-test:
