--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       # ########################
       - run:
           name: Install GraalVM
-          command: curl https://github.com/oracle/graal/releases/download/vm-19.1.1/graalvm-ce-linux-amd64-19.1.1.tar.gz -O -J -L && tar xfz graalvm-ce-linux-amd64-19.1.1.tar.gz && mv graalvm-ce-19.1.1 .graalvm && rm graalvm-ce-linux-amd64-19.1.1.tar.gz
+          command: curl https://github.com/oracle/graal/archive/refs/tags/vm-21.2.0/graal-vm-21.2.0.tar.gz -O -J -L && tar xfz graal-vm-21.2.0.tar.gz && mv graal-vm-21.2.0 .graalvm && rm graal-vm-21.2.0.tar.gz
       - run:
           name: Install native-image
           command: $GRAALVM_HOME/bin/gu install native-image
