--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ quarkus.swagger-ui.path = /swagger-ui
 quarkus.smallrye-openapi.path = /swagger
 
 # OIDC configuration
-quarkus.oidc.auth-server-url = https://keycloak.captain.thibaultdct.fr/auth/realms/Portalz
-quarkus.oidc.client-id = portalz-auth-service
-quarkus.oidc.credentials.secret = 72e5c3e2-67d8-4709-b1ff-7b1aac40e2bd
+quarkus.oidc.auth-server-url = https://keycloak.captain.thibaultdct.fr/auth/realms/portalz
+quarkus.oidc.client-id = portalz-api
+quarkus.oidc.credentials.secret = 088bc233-f69f-4cbd-a08a-2e27600e8fe2
 quarkus.oidc.tls.verification = none
