--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-logging-gelf</artifactId>
     </dependency>
+    <!-- VAULT -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-vault</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
