--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ quarkus.swagger-ui.path = /swagger-ui
 quarkus.smallrye-openapi.path = /swagger
 
 # OIDC configuration
-quarkus.oidc.auth-server-url = https://keycloak.cloud2.thibaultdct.fr/auth/realms/portalz
-quarkus.oidc.client-id = portalz-api
-quarkus.oidc.credentials.secret = 088bc233-f69f-4cbd-a08a-2e27600e8fe2
-quarkus.oidc.tls.verification = none
+# quarkus.oidc.auth-server-url = https://keycloak.cloud2.thibaultdct.fr/auth/realms/portalz
+# quarkus.oidc.client-id = portalz-api
+# quarkus.oidc.credentials.secret = 088bc233-f69f-4cbd-a08a-2e27600e8fe2
+# quarkus.oidc.tls.verification = none
