✨ Added Jaeger OpenTracing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ quarkus.smallrye-openapi.path = /swagger
 # quarkus.oidc.client-id = portalz-api
 # quarkus.oidc.credentials.secret = 088bc233-f69f-4cbd-a08a-2e27600e8fe2
 # quarkus.oidc.tls.verification = none
+
+# OpenTracing configuration
+quarkus.jaeger.service-name = myservice
+quarkus.jaeger.sampler-type = const
+quarkus.jaeger.sampler-param = 1
+quarkus.jaeger.endpoint = https://jaeger.cloud.thibaultdct.fr:14268/api/traces
+quarkus.log.console.format = %d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
