--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-vault</artifactId>
     </dependency>
+    <!-- JAEGER OPENTRACING -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-opentracing</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
