--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ quarkus.smallrye-openapi.path = /swagger
 # quarkus.oidc.tls.verification = none
 
 # OpenTracing configuration
-quarkus.jaeger.service-name = myservice
+quarkus.jaeger.service-name = portalz-api
 quarkus.jaeger.sampler-type = const
 quarkus.jaeger.sampler-param = 1
 quarkus.jaeger.endpoint = https://jaeger.cloud.thibaultdct.fr:14268/api/traces
