🐛 Fix CORS issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.application.name = portalz-api
 
+# CORS configuration
+quarkus.http.cors = true
+
 # datasource configuration
 quarkus.datasource.jdbc.url = jdbc:postgresql://supabase-db.cloud.thibaultdct.fr:5432/portalz
 quarkus.hibernate-orm.database.generation = update
